Fix initial pre-Angular flicker
Apparently, our app is big enough that Angular can't load its CSS fast
enough to make ngCloak work. If we put the display:none; in our own CSS,
then we can ensure nothing's visible even before Angular shows up.
Takes care of most of #130.

--- a/test/splash.css
+++ b/test/splash.css
@@ -9,6 +9,9 @@
     }
 }*/
 
+[data-ng-cloak]{
+    display: none !important;
+}
 
 #splash {
     position: absolute;
